# reqwest-streams-rs

./: Cargo.toml  README.md
.github/workflows/: tests.yml
examples/: arrow-stream.rs  csv-stream.rs  json-stream.rs  protobuf-stream.rs
src/: arrow_ipc_len_codec.rs  arrow_ipc_stream.rs  csv_stream.rs  error.rs  json_array_codec.rs  json_stream.rs  lib.rs  macros.rs  protobuf_len_codec.rs  protobuf_stream.rs  test_client.rs
