[package]
categories = ["asynchronous", "network-programming", "web-programming"]
description = "HTTP body streaming support for reqwest: JSON/CSV/Protobuf and others"
edition = "2021"
rust-version = "1.56"
homepage = "https://github.com/abdolence/reqwest-streams-rs"
repository = "https://github.com/abdolence/reqwest-streams-rs"
documentation = "https://docs.rs/reqwest-streams"
keywords = ["http", "web", "axus", 'stream']
license = "Apache-2.0"
name = "reqwest-streams"
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]
version = "0.1.4"

[badges]
maintenance = { status = "actively-developed" }

[lib]
name = "reqwest_streams"
path = "src/lib.rs"

[dependencies]
bytes = "1.1"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
async-trait="0.1"
tokio = { version = "1.20", features=["io-std", "io-util"] }
reqwest = { version = "0.11", features = ["stream"] }
serde = { version = "1.0", features = ["serde_derive"], optional = true }
serde_json = { version = "1.0", optional = true }
tokio-util = { version = "0.7", features=["io", "codec"] }
futures = "0.3"
csv = { version = "1.1", optional = true }
prost = { version="0.10", optional = true }

[features]
default = []
json = ["dep:serde", "dep:serde_json", "reqwest/json"]
csv = ["dep:csv", "dep:serde"]
protobuf = ["dep:prost"]

[dev-dependencies]
futures = "0.3"
hyper = "0.14"
reqwest = { version = "0.11", features = ["json", "stream"] }
tower = { version = "0.4", default-features = false, features = ["util", "make"] }
tower-http = { version = "0.3", features = ["util", "map-response-body"] }
tower-layer = "0.3"
tower-service = "0.3"
tokio = { version = "1.20", features = ["full"] }
prost = { version= "0.10", features = ["prost-derive"] }
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = { version = "1.0" }
axum = "0.5"
axum-streams = {  version="0.4", features = ["json", "csv", "protobuf"] }

[build-dependencies]
cargo-husky = { version = "1.5", default-features = false, features = ["run-for-all", "prepush-hook", "run-cargo-fmt"] }

[[example]]
name = "json-stream"
path = "examples/json-stream.rs"
required-features = ["json"]

[[example]]
name = "protobuf-stream"
path = "examples/protobuf-stream.rs"
required-features = ["protobuf"]
