[package]
categories = ["asynchronous", "network-programming", "web-programming"]
description = "HTTP body streaming support for reqwest: JSON/CSV/Protobuf and others"
edition = "2021"
rust-version = "1.56"
homepage = "https://github.com/abdolence/reqwest-streams-rs"
repository = "https://github.com/abdolence/reqwest-streams-rs"
documentation = "https://docs.rs/reqwest-streams"
keywords = ["http", "web", "axus", 'stream']
license = "Apache-2.0"
name = "reqwest-streams"
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]
version = "0.5.2-alpha.0"

[badges]
maintenance = { status = "actively-developed" }

[lib]
name = "reqwest_streams"
path = "src/lib.rs"

[dependencies]
bytes = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["io-std", "io-util"] }
reqwest = { version = "0.12", features = ["stream"], default-features = false }
serde = { version = "1", features = ["serde_derive"], optional = true }
serde_json = { version = "1", optional = true }
tokio-util = { version = "0.7", features = ["io", "codec"] }
futures = "0.3"
csv = { version = "1.3", optional = true }
prost = { version = "0.12", optional = true }
arrow = { version = "51", optional = true, features = ["ipc", "arrow-ipc"] }

[features]
default = []
json = ["dep:serde", "dep:serde_json", "reqwest/json"]
csv = ["dep:csv", "dep:serde"]
protobuf = ["dep:prost"]
arrow = ["dep:arrow"]

[dev-dependencies]
futures = "0.3"
hyper = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
prost = { version = "0.12", features = ["prost-derive"] }
serde = { version = "1", features = ["serde_derive"] }
serde_json = { version = "1.0" }
axum = "0.7"
axum-streams = { version = "0.14.1", features = ["json", "csv", "protobuf", "arrow"] }

[patch.crates-io]
arrow = { git = "https://github.com/apache/arrow-rs.git", rev = "a094863452d60b56a7fc6268119666a3359bb7be" }

[build-dependencies]
cargo-husky = { version = "1.5", default-features = false, features = ["run-for-all", "prepush-hook", "run-cargo-fmt"] }

[[example]]
name = "json-stream"
path = "examples/json-stream.rs"
required-features = ["json"]

[[example]]
name = "protobuf-stream"
path = "examples/protobuf-stream.rs"
required-features = ["protobuf"]

[[example]]
name = "csv-stream"
path = "examples/csv-stream.rs"
required-features = ["csv"]

[[example]]
name = "arrow-stream"
path = "examples/arrow-stream.rs"
required-features = ["arrow"]
